# advent-of-code

./: .gitignore  .pre-commit-config.yaml  01.py  05.py  06.py  08.py  11.py  12.py  14.py  15.py  16.py  17.py  18.py  18b.py  19.py  21.py  22.py  23a.py  23b.py  24.py  25.py  4.py  5.py  7a.py  9.py  README.md  pyproject.toml  requirements.txt  template.py
1/: solution.py
2/: solution1.py  solution2.py
2018/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.py  14.ipynb  15.py  16.py  17.ipynb  18.py  19.py  21.ipynb  22.ipynb  23.ipynb  25.ipynb
2018/src/: linkedlist.py  operators.py  point.py
2019/: 01.py  02.py  05.py  07.py  09.py  intcode.py
2021/: 01.py  02.py  03.py  04.py
2022/: 09.py
2022/1/: solution.py
2022/2/: solution.py
2022/3/: solution.py
2022/4/: solution.py
2022/5/: solution.py
2022/6/: solution.py
2022/7/: solution.py
2022/8/: solution.py
2023/: 07b.py  10.py  13.py  16.py  16c.py  16p.py  17.py  20.py  21.py  23b.py
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.ipynb  25.py
3/: solution.py
utils/: create_file.py  grid.py  leaderboard.ipynb
