[project]
name = "aoc2023"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
]

[tool.ruff.lint.per-file-ignores]
"template.py" = ["F401"]