[project]
name = "advent-of-code"
version = "1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
]

[tool.ruff.lint.per-file-ignores]
"template.py" = ["E402","F401"]
