[project]
name = "advent-of-code"
version = "1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
    "sympy>=1.13.3",
]

[tool.ruff.lint.per-file-ignores]
"template.py" = [
    "E402",  # module-import-not-at-top-of-file
    "F401",  # unused-import

]

[tool.ruff.format]
# For example, to avoid fixing "too-many-black-lines"
exclude=["template.py"]

[tool.ruff]
force-exclude = true
